(library
 (name tree)
 (modules tree)
 (libraries str))

(library
 (name parser)
 (modules parser)
 (libraries tree opal))

(library
 (name vm)
 (modules vm)
 (libraries tree str))

(library
 (name drawer)
 (modules drawer)
 (libraries graphics))

(library
 (name eval)
 (modules eval)
 (libraries str tree vm drawer))

(library
 (name input)
 (modules input))
